--- a/app.json
+++ b/app.json
@@ -28,6 +28,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "",
+    "githubUrl": "https://github.com/Olivier-Vromans/Arcade-App"
   }
 }
