--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-native": "^0.67.8",
     "expo": "~45.0.0",
     "expo-dark-mode-switch": "^0.0.2",
+    "expo-local-authentication": "^12.2.0",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
